Screenshots added for DataProvider details

--- a/TestNGPractice/test-output/index.html
+++ b/TestNGPractice/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\RAMU\AppData\Local\Temp\testng-eclipse-855654762\testng-customsuite.xml</span>
+                    <span>C:\Users\RAMU\AppData\Local\Temp\testng-eclipse-2147454029\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">6 methods,   6 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,32 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="extentReport.ExtentReportGeneration" hash-for-method="test">test</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.testng.topics.DataProviderTesting" hash-for-method="fbLogin(sfsfff, ddgdgf)">fbLogin(sfsfff, ddgdgf)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.testng.topics.DataProviderTesting" hash-for-method="fbLogin(anjaneyulu.b.ram@gmail.com, r@m@nj@neyulu)">fbLogin(anjaneyulu.b.ram@gmail.com, r@m@nj@neyulu)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.testng.topics.DataProviderTesting" hash-for-method="fbLogin(cggf, gdgdg)">fbLogin(cggf, gdgdg)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.testng.topics.DataProviderTesting" hash-for-method="fbLogin(badamramanjaneyulu@gmail.com, a@ramu1133)">fbLogin(badamramanjaneyulu@gmail.com, a@ramu1133)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.testng.topics.DataProviderTesting" hash-for-method="fbLogin(fgf, hgvhg)">fbLogin(fgf, hgvhg)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.testng.topics.DataProviderTesting" hash-for-method="fbLogin(dxff, gfgf)">fbLogin(dxff, gfgf)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +145,55 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">extentReport.ExtentReportGeneration</span>
+              <span class="class-name">com.testng.topics.DataProviderTesting</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test">
-                  </a> <!-- test -->
-                  <span class="method-name">test</span>
+                  <a name="fbLogin(sfsfff, ddgdgf)">
+                  </a> <!-- fbLogin(sfsfff, ddgdgf) -->
+                  <span class="method-name">fbLogin</span>
+                  <span class="parameters">(sfsfff, ddgdgf)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="fbLogin(anjaneyulu.b.ram@gmail.com, r@m@nj@neyulu)">
+                  </a> <!-- fbLogin(anjaneyulu.b.ram@gmail.com, r@m@nj@neyulu) -->
+                  <span class="method-name">fbLogin</span>
+                  <span class="parameters">(anjaneyulu.b.ram@gmail.com, r@m@nj@neyulu)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="fbLogin(cggf, gdgdg)">
+                  </a> <!-- fbLogin(cggf, gdgdg) -->
+                  <span class="method-name">fbLogin</span>
+                  <span class="parameters">(cggf, gdgdg)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="fbLogin(badamramanjaneyulu@gmail.com, a@ramu1133)">
+                  </a> <!-- fbLogin(badamramanjaneyulu@gmail.com, a@ramu1133) -->
+                  <span class="method-name">fbLogin</span>
+                  <span class="parameters">(badamramanjaneyulu@gmail.com, a@ramu1133)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="fbLogin(fgf, hgvhg)">
+                  </a> <!-- fbLogin(fgf, hgvhg) -->
+                  <span class="method-name">fbLogin</span>
+                  <span class="parameters">(fgf, hgvhg)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="fbLogin(dxff, gfgf)">
+                  </a> <!-- fbLogin(dxff, gfgf) -->
+                  <span class="method-name">fbLogin</span>
+                  <span class="parameters">(dxff, gfgf)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +201,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\RAMU\AppData\Local\Temp\testng-eclipse-855654762\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\RAMU\AppData\Local\Temp\testng-eclipse-2147454029\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +210,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;extentReport.ExtentReportGeneration&quot;/&gt;
+      &lt;class name=&quot;com.testng.topics.DataProviderTesting&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -184,16 +250,36 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(6);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test')
-data.setCell(0, 2, 'extentReport.ExtentReportGeneration')
-data.setCell(0, 3, 1213);
+data.setCell(0, 1, 'fbLogin')
+data.setCell(0, 2, 'com.testng.topics.DataProviderTesting')
+data.setCell(0, 3, 24975);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'fbLogin')
+data.setCell(1, 2, 'com.testng.topics.DataProviderTesting')
+data.setCell(1, 3, 17874);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'fbLogin')
+data.setCell(2, 2, 'com.testng.topics.DataProviderTesting')
+data.setCell(2, 3, 4859);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'fbLogin')
+data.setCell(3, 2, 'com.testng.topics.DataProviderTesting')
+data.setCell(3, 3, 4486);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'fbLogin')
+data.setCell(4, 2, 'com.testng.topics.DataProviderTesting')
+data.setCell(4, 3, 3883);
+data.setCell(5, 0, 5)
+data.setCell(5, 1, 'fbLogin')
+data.setCell(5, 2, 'com.testng.topics.DataProviderTesting')
+data.setCell(5, 3, 3439);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 seconds</span>
+              <span class="suite-total-time">Total running time: 59 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,11 +305,79 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">extentReport.ExtentReportGeneration</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">test</span>
+              <div class="chronological-class-name">com.testng.topics.DataProviderTesting</div> <!-- chronological-class-name -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">fbLogin(anjaneyulu.b.ram@gmail.com, r@m@nj@neyulu)</span>
+                <span class="method-start">17109 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">42090 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser</span>
+                <span class="method-start">42975 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">fbLogin(sfsfff, ddgdgf)</span>
+                <span class="method-start">54248 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">59112 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser</span>
+                <span class="method-start">59824 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">fbLogin(dxff, gfgf)</span>
+                <span class="method-start">70116 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">73559 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser</span>
+                <span class="method-start">74326 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">fbLogin(cggf, gdgdg)</span>
+                <span class="method-start">84594 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">89084 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser</span>
+                <span class="method-start">89853 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">fbLogin(fgf, hgvhg)</span>
+                <span class="method-start">101384 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">119261 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">launchBrowser</span>
+                <span class="method-start">120069 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">fbLogin(badamramanjaneyulu@gmail.com, a@ramu1133)</span>
+                <span class="method-start">129416 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">133317 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
