--- a/TestNGPractice/test-output/emailable-report.html
+++ b/TestNGPractice/test-output/emailable-report.html
@@ -9,10 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">1,296</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">137,106</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">extentReport.ExtentReportGeneration</td><td><a href="#m0">test</a></td><td rowspan="1">1551765076433</td><td rowspan="1">1213</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">com.testng.topics.DataProviderTesting</td><td><a href="#m0">fbLogin</a></td><td rowspan="6">1551861986891</td><td rowspan="6">4859</td></tr><tr class="passedeven"><td><a href="#m1">fbLogin</a></td></tr><tr class="passedeven"><td><a href="#m2">fbLogin</a></td></tr><tr class="passedeven"><td><a href="#m3">fbLogin</a></td></tr><tr class="passedeven"><td><a href="#m4">fbLogin</a></td></tr><tr class="passedeven"><td><a href="#m5">fbLogin</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">extentReport.ExtentReportGeneration#test</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.testng.topics.DataProviderTesting#fbLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>sfsfff</td><td>ddgdgf</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.testng.topics.DataProviderTesting#fbLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>anjaneyulu.b.ram@gmail.com</td><td>r@m@nj@neyulu</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.testng.topics.DataProviderTesting#fbLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>cggf</td><td>gdgdg</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.testng.topics.DataProviderTesting#fbLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>badamramanjaneyulu@gmail.com</td><td>a@ramu1133</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">com.testng.topics.DataProviderTesting#fbLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>fgf</td><td>hgvhg</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">com.testng.topics.DataProviderTesting#fbLogin</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>dxff</td><td>gfgf</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
