--- a/TestNGPractice/test-output/old/Default suite/methods.html
+++ b/TestNGPractice/test-output/old/Default suite/methods.html
@@ -1,6 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e6e9c3">  <td>19/03/05 11:21:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExtentReportGeneration.test()[pri:0, instance:extentReport.ExtentReportGeneration@28d25987]">test</td> 
-  <td>main@517210187</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:15:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderTesting.launchBrowser()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:15:49</td>   <td>17105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTesting.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">fbLogin</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:14</td>   <td>42086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderTesting.tearDown()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:15</td>   <td>42974</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderTesting.launchBrowser()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:26</td>   <td>54244</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTesting.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">fbLogin</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:31</td>   <td>59108</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderTesting.tearDown()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:32</td>   <td>59820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderTesting.launchBrowser()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:42</td>   <td>70112</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTesting.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">fbLogin</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:46</td>   <td>73556</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderTesting.tearDown()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:46</td>   <td>74323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderTesting.launchBrowser()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:16:57</td>   <td>84590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTesting.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">fbLogin</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:17:01</td>   <td>89081</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderTesting.tearDown()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:17:02</td>   <td>89849</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderTesting.launchBrowser()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:17:14</td>   <td>101380</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTesting.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">fbLogin</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:17:31</td>   <td>119257</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderTesting.tearDown()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:17:32</td>   <td>120065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProviderTesting.launchBrowser()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&gt;&gt;launchBrowser</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:17:42</td>   <td>129412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProviderTesting.fbLogin(java.lang.String, java.lang.String)[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">fbLogin</td> 
+  <td>main@1690254271</td>   <td></td> </tr>
+<tr bgcolor="e6e9c3">  <td>19/03/06 14:17:45</td>   <td>133313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProviderTesting.tearDown()[pri:0, instance:com.testng.topics.DataProviderTesting@42d80b78]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1690254271</td>   <td></td> </tr>
 </table>
